# satoshi-scanner

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
bot/: checker.py  config.py  db.py  found.py  generator.py  main.py  metrics.py  scanner.py  telegram.py
tests/: conftest.py  test_checker.py  test_db_integration.py  test_found.py  test_generator.py  test_main.py  test_scanner.py  test_telegram.py
