[project]
name = "satoshi-scanner"
version = "1.0.0"
description = "Educational Bitcoin address scanner with Telegram alerts and Prometheus metrics."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["bot", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["bot"]
markers = [
    "integration: tests that need Docker (testcontainers); deselect with -m 'not integration'",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
